--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!doctype html>
 <html lang="en-us">
-<head>
-  <title>Mahealani Kahaialii</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Mahealani Kahaialii">
+    <meta name="description" content="WDD 230 - Web Development I. Student assignment portal @BYU-Idaho. Winter 2021. ">
+    <title>Mahealani Kahaialii | WDD 230 Assigment Portal</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <script src="JS/last.modified.js"></script>
 </head>
 <body>
- <h1>Mahealani Kahaialii</h1>
+  <header>
+    <h1>Mahealani Kahaialii</h1>
+    <img src="Photos/Sisters.jpg" alt="Photo of Mahealani and her three sisters">
+  </header>
+  <main>
+    <h2>WDD 230 Assignment Portal</h2>
+    <hr>
+    <ul class="assignments">
+      <li>
+        Lesson 01: <a href="#">Assignment Portal</a>
+      </li>
+      <li>
+        Lesson 02: <a href="#">Design Principles Document</a>
+      </li>
+      <li>
+        Lesson 03: <a href="#">Website Planning Document</a>
+      </li>
+      <li>
+        Lesson 04: <a href="#">Preston Town Page</a>
+      </li>
+      <li>
+        Lesson 05: <a href="#">Preston Town Page Continued</a>
+      </li>
+      <li>
+        Lesson 06: <a href="#">Responsive Images and Font</a>
+      </li>
+      <li>
+        Lesson 07: <a href="#">The Gallery Page</a>
+      </li>
+      <li>
+        Lesson 08: <a href="#">Storm Center Page</a>
+      </li>
+      <li>
+        Lesson 09: <a href="#">The Weather Site Homepage</a>
+      </li>
+      <li>
+        Lesson 10: <a href="#">Preston Weather API</a>
+      </li>
+      <li>
+        Lesson 11: <a href="#">The Weather Site</a>
+      </li>
+      <li>
+        Lesson 12: <a href="#">Final Website - Planning</a>
+      </li>
+      <li>
+        Lesson 13: <a href="#">Final Project - Work Week</a>
+      </li>
+      <li>
+        Lesson 14: <a href="#">Final Website Project</a>
+      </li>
+    </ul>
+  </main>
+  <footer>
+    <p class="footerContent">
+      &copy;<span id="year">2021</span> | Mahealani Kahaialii | Oahu, Hawaii | <a href="http://www.byui.edu/online" target="_blank">BYU-Idaho</a>
+    <br>
+    Last Update: <span class="lastModified"></span></p>
+  </footer>
 </body>
-</html>  
+</html>
