--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr>
     <ul class="assignments">
       <li>
-        Lesson 01: <a href="#">Assignment Portal</a>
+        Lesson 01: <a href="https://mkahaialii.github.io/">Assignment Portal</a>
       </li>
       <li>
         Lesson 02: <a href="#">Design Principles Document</a>
