--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Lesson 01: <a href="https://mkahaialii.github.io/" target="_blank">Assignment Portal</a>
       </li>
       <li>
-        Lesson 02: <a href="#">Design Principles Document</a>
+        Lesson 02: <a href="https://mkahaialii.github.io/lesson2/design-principles.html">Design Principles Document</a>
       </li>
       <li>
         Lesson 03: <a href="#">Website Planning Document</a>
