--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,26 +25,23 @@
     <main>
       <section>
         <h3>Rule of Thirds</h3>
-        <p></p>
-        <a href=""></a>
+        <a href="https://www.nike.com/">Nike.com</a>
         <picture> <img src="images/Nike.jpg" alt="Ava Holloway and Kennedey George"/></picture>
-        <p></p>
+        <p>In this photo, the photographer uses the models to create the two vertical lines.</p>
       </section>
 
       <section>
         <h3>Contrast</h3>
-        <p></p>
-        <a href=""></a>
-        <picture> <img src="images/Netflix.jpg" alt="Movie Library"</picture>
-        <p></p>
+        <a href="https://www.netflix.com/">Netflix.com</a>
+        <picture> <img src="images/Netflix.jpg" alt="Movie Library"></picture>
+        <p>Netfix color theme is red and black. Very contrasting colors. Additionally, throughout the app and the website, Netflix uses white font color for text. Which adds high contrast with the black.</p>
       </section>
 
       <section>
         <h3>Alignment</h3>
-        <p></p>
-        <a href=""></a>
+        <a href="https://turo.com/">Turo.com</a>
         <picture> <img src="images/Turbo.jpg" alt="List of top cities with center alignment"/></picture>
-        <p></p>
+        <p>Turbo has centered their text all throughout the mobile view.</p>
       </section>
     </main>
       <footer>
