--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Lesson 02: <a href="https://mkahaialii.github.io/lesson2/design-principles.html">Design Principles Document</a>
       </li>
       <li>
-        Lesson 03: <a href="#">Website Planning Document</a>
+        Lesson 03: <a href="https://mkahaialii.github.io/lesson3/index.html">Website Planning Document</a>
       </li>
       <li>
         Lesson 04: <a href="#">Preston Town Page</a>
