--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Lesson 03: <a href="https://mkahaialii.github.io/lesson3/index.html">Website Planning Document</a>
       </li>
       <li>
-        Lesson 04: <a href="#">Preston Town Page</a>
+        Lesson 04: <a href="https://mkahaialii.github.io/lesson4/">Preston Town Page</a>
       </li>
       <li>
         Lesson 05: <a href="#">Preston Town Page Continued</a>
