--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title> TruForecast Site Plan</title>
-    <meta name="description" content="[Enter what this site is about]a">
+    <meta name="description" content="Website plan color-scheme">
     <link rel="stylesheet" href="/lesson3/small.css">
     <link rel="stylesheet" href="/lesson3/normalize.css">
     <link rel="stylesheet" href="/lesson3/medium.css">
     <link rel="stylesheet" href="/lesson3/large.css">
     <script src="/JS/last.modified.js"></script>
+    <script src="/lesson4/menubar.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
 </head>
 <body>
     <header>
@@ -29,6 +31,7 @@
               <li><a href="color-scheme.html">Color</href=></a></li>
             </ul>        
           </nav>
+          <button href="javascript:void(0);" class="icon" onclick="menu()"><i class="fa fa-bars"></i></button>
         </div>
       </div>
     </header>
