--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/lesson3/medium.css">
     <link rel="stylesheet" href="/lesson3/large.css">
     <script src="/JS/last.modified.js"></script>
+    <script src="/lesson4/menubar.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
   </head>
   
   <body>
@@ -30,6 +32,7 @@
               <li><a href="color-scheme.html">Color</href=></a></li>
             </ul>        
           </nav>
+          <button href="javascript:void(0);" class="icon" onclick="menu()"><i class="fa fa-bars"></i></button>
         </div>
       </div>
     </header>
