--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -14,12 +14,14 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>  
 </head>
 <body>
-    <header>
-      <img src="/lesson3/Images/1530385-512.png" alt="Logo">
-      <section class="headings">
-        <H1>TruForecast</H1>
-        <h2 class="subheading">Where you can true and accurate weather updates.</h2>
-      </section>
+  <header>
+    <div class="header">
+    <img src="/lesson3/Images/1530385-512.png" alt="Logo">
+    <section class="headings">
+      <H1>TruForecast</H1>
+      <h2 class="subheading">Where you can true and accurate weather updates.</h2>
+    </section>
+    </div>
         
       <div class="mobile-container">
         <div class="topnav">
