--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -16,11 +16,13 @@
   
   <body>
     <header>
+      <div class="header">
       <img src="/lesson3/Images/1530385-512.png" alt="Logo">
       <section class="headings">
         <H1>TruForecast</H1>
-        <h2 class="subheadings">Where you can true and accurate weather updates.</h2>
+        <h2 class="subheading">Where you can true and accurate weather updates.</h2>
       </section>
+      </div>
       
       <div class="mobile-container">
         <div class="topnav">
