--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -17,12 +17,13 @@
 
 <body>
   <header>
-    <img src="/lesson3/Images/1530385-512.png"></img>
+    <div class="header">
+    <img src="/lesson3/Images/1530385-512.png" alt="Logo">
     <section class="headings">
       <H1>TruForecast</H1>
-      <h2 class="subheading">Where you can get true weather updates.</h2>
+      <h2 class="subheading">Where you can true and accurate weather updates.</h2>
     </section>
-  </header>
+    </div>
 
   <div class="mobile-container">
     <div class="topnav">
