--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -42,7 +42,7 @@
   </div>
   
   <main>
-    <h3>PRESTON</h3>
+    <div class="sections"><h3>PRESTON</h3></div>
     <div class="sections">WEATHER SUMMARY</div>
     <div class="sections">FIVE DAY FORECAST</div>
     <div class="sections">ARTICLE</div>
