--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/lesson3/normalize.css">
   <link rel="stylesheet" href="/lesson4/medium.css">
   <link rel="stylesheet" href="/lesson4/small.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/lesson3/Images/1530385-512.png">
   <script src="/JS/last.modified.js"></script>
   <script src="/lesson4/menubar.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
