--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="/lesson3/normalize.css">
   <link rel="stylesheet" href="/lesson4/medium.css">
   <link rel="stylesheet" href="/lesson4/small.css">
-  <link rel="stylesheet" href="/lesson3/Images/1530385-512.png">
   <script src="/JS/last.modified.js"></script>
   <script src="/lesson4/menubar.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -18,7 +17,7 @@
 
 <body>
   <header>
-    <i class="fas fa-clock" style="font-size:60px;color:lightblue;padding-right: 30px; text-shadow:2px 2px 4px #000000;"></i>
+    <img src="/lesson3/Images/1530385-512.png"></img>
     <section class="headings">
       <H1>TruForecast</H1>
       <h2 class="subheading">Where you can get true weather updates.</h2>
