--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Lesson 04: <a href="https://mkahaialii.github.io/lesson4/">Preston Town Page</a>
       </li>
       <li>
-        Lesson 05: <a href="#">Preston Town Page Continued</a>
+        Lesson 05: <a href="https://mkahaialii.github.io/lesson5/">Preston Town Page Continued</a>
       </li>
       <li>
         Lesson 06: <a href="#">Responsive Images and Font</a>
