--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -43,8 +43,40 @@
   
   <main>
     <div class="sections"><h3>PRESTON</h3></div>
-    <div class="sections">WEATHER SUMMARY</div>
-    <div class="sections">FIVE DAY FORECAST</div>
+    <div class="sections">
+      <img class="headerimg" src="/Photos/Header Img.jpg" alt="Overlooking green valley">
+      <section class="section-weather">
+        <h4>WEATHER SUMMARY</h4>
+        <p class="paragraph"><strong>Temperature:</strong> 67ºF</p>
+        <p class="paragraph"><strong>Humidity:</strong> 42%</p>
+        <p class="paragraph"><strong>Wind:</strong> 10mph</p>
+    </section>
+    </div>
+    <div class="sections">
+      <h4>FIVE DAY FORECAST</h4>
+      <section>
+        <table class="table">
+           <tbody><tr class="color-table">
+             <th>Mon</th>
+             <th>Tue</th>
+             <th>Wed</th>
+             <th>Thu</th>
+             <th>Fri</th>
+           </tr>
+           <tr>
+             <td><img class="fiveday" src="/Photos/iconfinder_weather-04_1530389.png" alt="overcast"></td>
+             <td><img class="fiveday" src="/Photos/iconfinder_weather-04_1530389.png" alt="overcast"></td>
+             <td><img class="fiveday" src="/Photos/iconfinder_weather-04_1530389.png" alt="overcast"></td>
+             <td><img class="fiveday" src="/Photos/iconfinder_weather-04_1530389.png" alt="overcast"></td>
+             <td><img class="fiveday" src="/Photos/iconfinder_weather-04_1530389.png" alt="overcast"></td>
+           </tr>
+             <tr><td class="color-table">70°.50° F</td>
+             <td class="color-table"> 68°.48° F</td>
+             <td class="color-table">68°.45° F</td>
+             <td class="color-table">67°.45° F</td>
+             <td class="color-table">65°.40° F</td>
+         </tr></tbody></table>
+        </section></div>
     <div class="sections">ARTICLE</div>
     <div class="sections">CONTACT INFORMATION</div>
   </main> 
