--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -77,8 +77,21 @@
              <td class="color-table">65°.40° F</td>
          </tr></tbody></table>
         </section></div>
-    <div class="sections">ARTICLE</div>
-    <div class="sections">CONTACT INFORMATION</div>
+    <div class="article">ARTICLE</div>
+
+      <div class="contact">
+        <img src="images/preston_map.jpg">
+        <section>
+          <p><strong>Checking Weather Site</strong></p>
+          <p>📌 30N ft N</p>
+          <p>Preston ID 83263</p>
+          <br>
+          <p>Call: 123-456-7890</p>
+          <p>📧 mam20002@byui.edu</p>
+          <img src="images/facebook_logo.png"><img src="images/instagram_logo.png">
+          <img src="images/whatsapp_logo.png">
+        </section>
+      </div>CONTACT INFORMATION</div>
   </main> 
 
   <footer>
