--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Lesson 05: <a href="https://mkahaialii.github.io/lesson5/">Preston Town Page Continued</a>
       </li>
       <li>
-        Lesson 06: <a href="#">Responsive Images and Font</a>
+        Lesson 06: <a href="https://mkahaialii.github.io/lesson6/">Responsive Images and Font</a>
       </li>
       <li>
         Lesson 07: <a href="#">The Gallery Page</a>
