--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Mahealani Kahaialii">
-    <meta name="description" content="WDD 230 - Web Development I. Student assignment portal @BYU-Idaho. Winter 2021. ">
+    <meta name="description" content="WDD 230 - Web Development I. Student assignment portal @BYU-Idaho. Winter 2021.. ">
     <title>Mahealani Kahaialii | WDD 230 Assigment Portal</title>
     <link rel="stylesheet" href="CSS/style.css">
     <script src="JS/last.modified.js"></script>
