--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         Lesson 06: <a href="https://mkahaialii.github.io/lesson6/index.html">Responsive Images and Font</a>
       </li>
       <li>
-        Lesson 07: <a href="#">The Gallery Page</a>
+        Lesson 07: <a href="https://mkahaialii.github.io/lesson7/gallery-7.html">The Gallery Page</a>
       </li>
       <li>
         Lesson 08: <a href="#">Storm Center Page</a>
