--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -10,10 +10,6 @@
     <link rel="stylesheet" href="/lesson7/CSS/small.css" />
     <link rel="stylesheet" href="/lesson7/CSS/medium.css" />
     <link rel="stylesheet" href="/lesson7/CSS/large.css" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    /> -->
   </head>
   <body>
     <header>
@@ -22,19 +18,18 @@
         9:00 a.m. Saturday at the city park pavilion.
       </aside>
 
-      <!---------------------------picture-density sensitive logo (replacing .png with .svg)------------------->
       <picture>
         <img
-          id="headerimg_small"
+          id="logo"
           src="/lesson3/Images/1530385-512.png"
           alt="AllTru/forecast Logo"
       /></picture>
       <section class="headings1">
-        <h1 class="headertitle">AllTruForecast</h1>
+        <h1 class="headertitle">TruForecast</h1>
         <br />
       </section>
       <div class="headings2">
-        <h2 class="headertitle">
+        <h2>
           Where you can get true weather updates.
         </h2>
       </div>
@@ -56,103 +51,79 @@
       <div id="weather_pics">
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/cloudy_400.jpg"
-                alt="cloudy sky">
-            <figcaption>Cloudy Idaho Skies</figcaption>
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Clear_Skies.jpg"
+                alt="Clear sky">
+            <figcaption>Clear Clear_Skies</figcaption>
         </figure>
 
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/breezy_400.jpg"
-                alt="cloudy sky">
-            <figcaption>A breezy Southeastern Idaho day</figcaption>
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Flashflood.jpg"
+                alt="Flashfloods">
+            <figcaption>Flashfloods</figcaption>
         </figure>
 
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/frost_400.jpg"
-                alt="frosty mountain scene">
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Dancing_in_the_rain (1).jpg"
+                alt="Little girl playing in the rain">
 
-            <figcaption>An early season frost</figcaption>
+            <figcaption>Dancing in the Rain</figcaption>
         </figure>
 
         <figure class="gallery">
           <picture>
-              <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-              data-src="img/gallery_opt_imgs/gusty_400.jpg"
-              alt="wind farm in green field">
-          <figcaption>Idaho wind means green energy</figcaption>
+              <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+              data-src="/lesson7/IMG/Foggy_Weather.png"
+              alt="Foggy street">
+          <figcaption>Fog</figcaption>
       </figure>
 
           <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/lightning_400.jpg"
-                alt="single lightning strike">
-            <figcaption>Thunder clap</figcaption>
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Lightning_Strikes.jpg"
+                alt="Lightning strike">
+            <figcaption>Lightning Strikes Again</figcaption>
         </figure>
 
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/rain_400.jpg"
-                alt="Autumn leaves in a rain puddle">
-            <figcaption>Autumn rains</figcaption>
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Storm_Clouds.jpg"
+                alt="Storm clouds">
+            <figcaption>Storm Clouds</figcaption>
         </figure>
 
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/rainbow_400.jpg"
-                alt="rainbow">
-            <figcaption>Rainbow majesty</figcaption>
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Tornado.jpg"
+                alt="Tornado">
+            <figcaption>Tornado</figcaption>
         </figure>
 
         <figure class="gallery">
           <picture>
-              <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-              data-src="img/gallery_opt_imgs/ice_400.jpg"
-              alt="snowflake">
-          <figcaption>Winter's first storm</figcaption>
+              <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+              data-src="/lesson7/IMG/Winter_Storm.jpg"
+              alt="River surrounded by snow covered trees and ground">
+          <figcaption>Winter's calm</figcaption>
       </figure>
 
         <figure class="gallery">
             <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/thunder_400.jpg"
-                alt="night lightning">
-            <figcaption>Evening thundershowers</figcaption>
-        </figure>       
-
-        <figure class="gallery">
-          <picture>
-              <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-              data-src="img/gallery_opt_imgs/part_cloud_400.jpg"
-              alt="ripe wheatfield with cloudy skies">
-          <figcaption>Partly cloudy skies for a chance of rain</figcaption>
-        </figure>
-
-        <figure class="gallery">
-            <picture>
-                <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-                data-src="img/gallery_opt_imgs/summer_storm_400.jpg"
-                alt="moody skies">
-            <figcaption>Moody skies</figcaption>
-        </figure>
-
-        <figure class="gallery">
-          <picture>
-
-              <img class="weather_gallery" src="img/placeholder_gallery.jpg"
-              data-src="img/gallery_opt_imgs/fog_400.jpg"
-              alt="morning mist">
-          <figcaption>Morning mist across the valley</figcaption>
-      </figure>
-
+                <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
+                data-src="/lesson7/IMG/Hail.jpg"
+                alt="Hail weather">
+            <figcaption>Hail Storm</figcaption>
+            </figure>
     </div>
+
+    <br>
 
       <div id="mapdiv">
         <iframe
@@ -175,10 +146,6 @@
             &#9742; &nbsp; 801 555-1234<br /><br />
             &#9993; &nbsp; email@Truforecast.com<br />
           </p>
-          <a
-            href="#"
-            ><img class="smicon" src="#" alt="#" /></a
-          >
           <a href="https://twitter.com/"
             ><img class="smicon" src="/Photos/Twitter.png" alt="twitter icon"
           /></a>
@@ -193,14 +160,13 @@
     </main>
     <footer>
       <p>
-        &copy; <span id="currentyear"></span> Mahealani Kahaialii | Oahu, Hawaii |
+        &copy; <span id="currentyear">2021</span> Mahealani Kahaialii | Oahu, Hawaii |
         <a class="footlink" href="https://www.byui.edu/online"
-          >BYU-I Online</a
-        >
-      </p>
-      <span id="currentdate"></span><br /><br />
+          >BYU-I Online</a>
+      <br>
+    Last Update: <span class="lastModified"></span></p>
     </footer>
-    <script src="/currentdate.js"></script>
+    <script src="/lesson3/script.js"></script>
     <script src="/lesson7/JS/pancake.js"></script>
     <script src="/lesson7/JS/lazyload.js"></script>
     <script>
