--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -111,7 +111,7 @@
               <img class="weather_gallery" src="/lesson7/IMG/placeholder.jpg"
               data-src="/lesson7/IMG/Winter_Storm.jpg"
               alt="River surrounded by snow covered trees and ground">
-          <figcaption>Winter's calm</figcaption>
+          <figcaption>Winter calm</figcaption>
       </figure>
 
         <figure class="gallery">
