lesson 8 and updates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Lesson 07: <a href="https://mkahaialii.github.io/lesson7/gallery-7.html">The Gallery Page</a>
       </li>
       <li>
-        Lesson 08: <a href="#">Storm Center Page</a>
+        Lesson 08: <a href="https://mkahaialii.github.io/lesson8/stormcenter.html">Storm Center Page</a>
       </li>
       <li>
         Lesson 09: <a href="#">The Weather Site Homepage</a>
