--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -22,13 +22,13 @@
         <img
           id="logo"
           src="/lesson3/Images/1530385-512.png"
-          alt="AllTru/forecast Logo"
+          alt="AllTruforecast Logo"
       /></picture>
-      <section class="headings1">
+      <section class="heading1">
         <h1 class="headertitle">TruForecast</h1>
         <br />
       </section>
-      <div class="headings2">
+      <div class="heading2">
         <h2>
           Where you can get true weather updates.
         </h2>
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-      <h2 class="gal_hl">Image Gallery</h2>
+      <h2 class="galleryHeading">Image Gallery</h2>
       <div id="weather_pics">
         <figure class="gallery">
             <picture>
