--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -34,11 +34,11 @@
             <button id="navbut" onclick="toggleMenu()">&#9776;</button>
             <ul id="primaryNav" class="hide">
                 <li><a href="#">Home</a></li>
-                <li><a href="https://edenborrowman.github.io/assignments/lesson6/preston-6.html">Preston</a></li>
+                <li><a href="https://mkahaialii.github.io/lesson6/index.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
-                <li class="active"><a href="edenborrowman.github.io/assignments/lesson8/stormcenter.html">Storm Center</a></li>
-                <li><a href="https://edenborrowman.github.io/gallery-7.html">Gallery</a></li>
+                <li class="active"><a href="https://mkahaialii.github.io/lesson8/stormcenter.html">Storm Center</a></li>
+                <li><a href="https://mkahaialii.github.io/lesson7/gallery-7.html">Gallery</a></li>
             </ul>
         </nav>
     </header>
@@ -128,13 +128,7 @@
 <div id="mapdiv">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m16!1m10!1m3!1d94731.53967909195!2d-111.880325!3d42.099747!2m1!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20ID%2083263!5e0!3m2!1sen!2sus!4v1612414617377!5m2!1sen!2sus"
-      width="400"
-      height="300"
-      frameborder="0"
-      style="border: 0"
-      allowfullscreen=""
-      aria-hidden="false"
-      tabindex="0"
+      width="400" height="300" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0"
     ></iframe>
 
     <section id="contact_info">
