--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -45,7 +45,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Fish Haven</a></li>
       <li><a href="#">Soda Springs</a></li>
-      <li><a class="active" href="preston6.html">Preston</a></li>
+      <li><a class="active" href="https://mkahaialii.github.io/lesson6/index.html">Preston</a></li>
       <li><a href="#">Storm Center</a></li>
       <li><a href="#">Gallery</a></li>
     </ul>
