--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Lesson 08: <a href="https://mkahaialii.github.io/lesson8/stormcenter.html">Storm Center Page</a>
       </li>
       <li>
-        Lesson 09: <a href="#">The Weather Site Homepage</a>
+        Lesson 09: <a href="https://mkahaialii.github.io/lesson9/index.html">The Weather Site Homepage</a>
       </li>
       <li>
         Lesson 10: <a href="#">Preston Weather API</a>
