--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         Lesson 09: <a href="https://mkahaialii.github.io/lesson9/index.html">The Weather Site Homepage</a>
       </li>
       <li>
-        Lesson 10: <a href="#">Preston Weather API</a>
+        Lesson 10: <a href="https://mkahaialii.github.io/lesson11/preston.html">Preston Weather API</a>
       </li>
       <li>
-        Lesson 11: <a href="#">The Weather Site</a>
+        Lesson 11: <a href="https://mkahaialii.github.io/lesson11/index.html">The Weather Site</a>
       </li>
       <li>
         Lesson 12: <a href="#">Final Website - Planning</a>
