--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -51,7 +51,7 @@
 
       <picture class="hero">
         <source srcset="images/headerimage_medium.jpg" media="(min-width: 500px) and (max-width: 800px)">
-        <source srcset="images/headerimage.jpg" media="(min-width:800px )">
+        <source srcset="images/headerimage_large.jpg" media="(min-width:800px )">
         <img  class="hero-image" src="images/headerimage.jpg" alt="Preston local park">
       </picture>
       <br>
